--- a/debian/control
+++ b/debian/control
@@ -16,7 +16,7 @@ Build-Depends: debhelper (>= 9.20160114~),
                qtbase5-private-dev (>= 5.9.1+dfsg~),
                qtdeclarative5-private-dev (>= 5.9.1~)
 Build-Depends-Indep: libqt5sql5-sqlite (>= 5.9.1~),
-                     qtbase5-doc-html (>= 5.9.1+dfsg~),
+                     qtbase5-doc-html (>= 5.6.0),
                      qttools5-dev-tools (>= 5.9.1~)
 Standards-Version: 4.0.0
 Homepage: http://qt-project.org/
