--- a/debian/control
+++ b/debian/control
@@ -13,15 +13,15 @@ Build-Depends: debhelper (>= 9~),
                libbluetooth-dev [linux-any],
                pkg-config,
                pkg-kde-tools,
-               qtbase5-dev (>= 5.9.3+dfsg~),
-               qtbase5-private-dev (>= 5.9.3+dfsg~),
-               qtdeclarative5-private-dev (>= 5.9.3~)
-Build-Depends-Indep: libqt5sql5-sqlite (>= 5.9.3~),
-                     qttools5-dev-tools (>= 5.9.3~)
+               qtbase5-dev (>= 5.9.5+dfsg~),
+               qtbase5-private-dev (>= 5.9.5+dfsg~),
+               qtdeclarative5-private-dev (>= 5.9.5~)
+Build-Depends-Indep: qtbase5-doc-html,
+                     qttools5-dev-tools (>= 5.9.5~)
 Standards-Version: 4.1.1
 Homepage: http://qt-project.org/
-Vcs-Git: https://anonscm.debian.org/git/pkg-kde/qt/qtconnectivity.git
-Vcs-Browser: https://anonscm.debian.org/cgit/pkg-kde/qt/qtconnectivity.git
+Vcs-Git: https://salsa.debian.org/qt-kde-team/qt/qtconnectivity.git
+Vcs-Browser: https://salsa.debian.org/qt-kde-team/qt/qtconnectivity
 
 Package: libqt5bluetooth5
 Architecture: linux-any
